fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@
   padding: 0;
 }
 
-body {
+body,
+html {
   overflow-x: hidden;
 }
 
